--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,18 +4,21 @@ layout: default
 
 <div class="home">
 
-  <h1 class="page-heading">Réalisations</h1>
+  <h1 class="title-primary">Réalisations</h1>
 
   {{ content }}
   <section class="section-portfolio" id="realisations">
       {% for post in site.posts %}
       <article class="block-primary clearfix">
           <div class="block-primary__info {{post.infoExtraClass}}">
-              <h2 class="block-primary__title">{{post.title}}</h2>
+              <h2 class="block-primary__title classTest1">{{post.title}}</h2>
               <div class="block-primary__wysiwyg">
                   {{post.description}}
               </div>
           </div>
+          <div class="block-primary__preview">
+            <img src="assets/img/{{post.path_image_desktop}}" alt="Jekyll logo" />
+            </div>
       </article>
       {% endfor %}
   </section>
