--- a/_sass/components/_base.scss
+++ b/_sass/components/_base.scss
@@ -67,7 +67,7 @@ figcaption {
  * Lists
  */
 ul, ol {
-  margin-left: $spacing-unit;
+  margin-left: 0;
 }
 
 li {
@@ -92,16 +92,16 @@ h1, h2, h3, h4, h5, h6 {
  * Links
  */
 a {
-  color: $brand-color;
+  color: inherit;
   text-decoration: none;
 
   &:visited {
-    color: darken($brand-color, 15%);
+  //  color: darken($brand-color, 15%);
   }
 
   &:hover {
-    color: $text-color;
-    text-decoration: underline;
+    //color: $text-color;
+    //text-decoration: underline;
   }
 
   .social-media-list &:hover {
@@ -157,30 +157,6 @@ pre {
     padding-left: 0;
   }
 }
-
-
-
-/**
- * Wrapper
- */
-.wrapper {
-  max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit} * 2));
-  max-width:         calc(#{$content-width} - (#{$spacing-unit} * 2));
-  margin-right: auto;
-  margin-left: auto;
-  padding-right: $spacing-unit;
-  padding-left: $spacing-unit;
-  @extend %clearfix;
-
-  @include media-query($on-laptop) {
-    max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit}));
-    max-width:         calc(#{$content-width} - (#{$spacing-unit}));
-    padding-right: $spacing-unit / 2;
-    padding-left: $spacing-unit / 2;
-  }
-}
-
-
 
 /**
  * Clearfix
