--- a/_sass/app.scss
+++ b/_sass/app.scss
@@ -7,5 +7,6 @@
   "components/block",
   "components/layouts",
   "components/footer",
-  "components/header"
+  "components/header",
+  "components/devicon"
 ;
