--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,36 +2,11 @@
 layout: default
 ---
 
-<div class="home">
+<div class="homepage">
+  <h1 class=title-primary>Bienvenue sur mon portfolio</h1>
 
-  <h1 class="title-primary">Réalisations</h1>
+    {% include about.html %}
+    {% include skills.html %}
+    {% include portfolio.html %}
 
-  {{ content }}
-  <section class="section-portfolio" id="realisations">
-      {% for post in site.posts %}
-      <article class="block-primary clearfix">
-          <div class="block-primary__info {{post.infoExtraClass}}">
-              <h2 class="block-primary__title classTest1">{{post.title}}</h2>
-              <div class="block-primary__wysiwyg">
-                  {{post.description}}
-              </div>
-          </div>
-          <div class="block-primary__preview-wrapper">
-            <div class="block-primary__preview-desktop">
-                <div class="desktop-bar">
-                  <div class="desktop-bar__action-wrapper">
-                     <span class="desktop-bar__action-item"></span>
-                   </div><!--
-                   --><div class="desktop-bar__url-bar">
-                     <a href="{{post.anchor_url}}" class="desktop-bar__url-anchor">{{post.anchor_link}}</a>
-                   </div>
-                </div>
-                <div class="block-primary__preview-desktop-image-wrapper">
-                    <img src="/assets/img/{{post.path_image_desktop}}" alt="{{post.alt_image}}">
-                </div>
-            </div>
-          </div>
-      </article>
-      {% endfor %}
-  </section>
 </div>
