--- a/_sass/components/_settings.scss
+++ b/_sass/components/_settings.scss
@@ -1,8 +1,8 @@
 @charset "utf-8";
-@import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,700,800');
+@import url(https://fonts.googleapis.com/css?family=Lato:100,300,400,500,600,700,900);
 // Define defaults for each variable.
 
-$base-font-family: "Montserrat", sans-serif !default;
+$base-font-family: "Lato", sans-serif !default;
 $base-font-size:   16px !default;
 $base-font-weight: 300 !default;
 $small-font-size:  $base-font-size * 0.875 !default;
