--- a/_sass/components/layouts.scss
+++ b/_sass/components/layouts.scss
@@ -15,19 +15,35 @@
 }
 
 .title-primary{
-    font:800 30px/42px $base-font-family;
+   font:800 27px/37px $base-font-family;
+   margin-bottom: calculateRem(15px);
 }
 
+.title-secondary{
+   font:800 17px/24px $base-font-family;
+   text-transform: uppercase;
+   letter-spacing: .1rem;
+
+}
+
+.title-tertiary{
+  font:800 14px/24px $base-font-family;
+  text-transform: uppercase;
+  letter-spacing: .1rem;
+ margin-bottom: calculateRem(15px);
+}
 
 .wysiwyg{
   font:300 16px/28px $base-font-family;
+  margin-bottom: calculateRem(15px);
 }
 
 
-.section-portfolio{
-  padding:$spacing-unit 0;
+.section-skills{
+  &__wrapper{
+     margin-bottom: calculateRem(15px);
+  }
 }
-
 
 
 /**
