Sections Experience et formation

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,10 +1,17 @@
 <section class="homepage-section section-about" id="about">
-  <p class="title-tertiary">Ce que je suis</p>
-  <div class="wysiwyg">Autonome dans mon travail, passionnée par mon domaine, curieuse des nouvelles technos, persévérante dans mon apprentissage, joueuse d’équipe, fan des frères Coen, féru de blues de folk et de jazz, je suis tout ça et bien plus encore.</div>
-
-  <p class="title-tertiary">Ce que je fais</p>
-  <div class="wysiwyg">Intégration web : découpe et intégration de maquettes HTML, expertise CSS, responsive web design; Respect des standards, forte sensibilité à la qualité web et à son accessibilité; Etre toujours en apprentissage. C’est l’apanage de ce métier!</div>
-
-  <p class="title-tertiary">Mon parcours</p>
-  <div class="wysiwyg">Cinq années dans le commerce, avant de reprendre une année d’étude pré-universitaire, puis une formation en maintenance informatique. Première expérience de travail au Canada comme technologue en cartographie. Nouveau retour aux études, je découvre enfin mon nouvel univers.</div>
+  <div class="page-wrapper">
+      <h2 class="title-secondary">À propos de moi</h2>
+      <div class="wysiwyg">
+          <p class="title-tertiary">Ce que je suis</p>
+          <div class="">Autonome dans mon travail, passionnée par mon domaine, curieuse des nouvelles technos, persévérante dans mon apprentissage, joueuse d’équipe, fan des frères Coen, féru de blues de folk et de jazz, je suis tout ça et bien plus encore.</div>
+      </div>
+      <div class="wysiwyg">
+          <p class="title-tertiary">Ce que je fais</p>
+          <div class="">Intégration web : découpe et intégration de maquettes HTML, expertise CSS, responsive web design; Respect des standards, forte sensibilité à la qualité web et à son accessibilité; Etre toujours en apprentissage. C’est l’apanage de ce métier!</div>
+      </div>
+      <div class="wysiwyg">
+          <p class="title-tertiary">Mon parcours</p>
+          <div class="">Cinq années dans le commerce, avant de reprendre une année d’étude pré-universitaire, puis une formation en maintenance informatique. Première expérience de travail au Canada comme technologue en cartographie. Nouveau retour aux études, je découvre enfin mon nouvel univers.</div>
+      </div>
+  </div>
 </section>
