--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,6 +21,8 @@
         <div class="trigger">
           <a href="#about"  class="page-link" title="À propos de moi">À propos</a>
           <a href="#skills" class="page-link" title="Mes compétences">Compétences</a>
+          <a href="#experience" class="page-link" title="Expériences">Expériences</a>
+          <a href="#formation" class="page-link" title="formation">Formation</a>
           <a href="#works"  class="page-link" title="Mes réalisations">Réalisations</a>
         </div>
       </nav>
