--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,10 +3,13 @@ layout: default
 ---
 
 <div class="homepage">
-  <h1 class=title-primary>Bienvenue sur mon portfolio</h1>
-
+  <div class="page-wrapper">
+      <h1 class=title-primary>Bienvenue sur mon portfolio</h1>
+  </div>
     {% include about.html %}
     {% include skills.html %}
+    {% include experience.html %}
+    {% include formation.html %}
     {% include portfolio.html %}
 
 </div>
