--- a/_sass/components/block.scss
+++ b/_sass/components/block.scss
@@ -12,6 +12,9 @@
         border-top:0;
     }
 
+    &__preview-desktop-image{
+      width:100%;
+    }
     &__title{
       font:700 28px/42px $base-font-family;
     }
