--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -1,37 +1,38 @@
 <section class="homepage-section section-skills" id="skills">
-    <div class="section-skills__wrapper">
-        <p class="title-tertiary">Développement</p>
-        <i class="devicon-html5-plain colored"></i>
-        <i class="devicon-css3-plain colored"></i>
-        <i class="devicon-javascript-plain colored"></i>
-        <i class="devicon-jquery-plain colored"></i>
-        <br /><br />
-        <i class="devicon-foundation-plain-wordmark colored"></i>
-        <i class="devicon-sass-original colored"></i>
-        <i class="devicon-less-plain-wordmark colored"></i>
-        <i class="devicon-gulp-plain colored"></i>
-        <br />
-        <i class=" colored">JSP</i>
-        <i class="devicon-php-plain colored"></i>
-        <i class=" colored">Coldfusion</i>
-    </div>
+    <div class="page-wrapper">
+      <h2 class="title-secondary">Compétences</h2>
+      <div class="wysiwyg">
+          <p class="title-tertiary">Développement</p>
+          <i class="devicon-html5-plain colored"></i>
+          <i class="devicon-css3-plain colored"></i>
+          <i class="devicon-javascript-plain colored"></i>
+          <i class="devicon-jquery-plain colored"></i>
+          <br /><br />
+          <i class="devicon-foundation-plain-wordmark colored"></i>
+          <i class="devicon-sass-original colored"></i>
+          <i class="devicon-less-plain-wordmark colored"></i>
+          <i class="devicon-gulp-plain colored"></i>
+          <br />
+          <i class=" colored">JSP</i>
+          <i class="devicon-php-plain colored"></i>
+          <i class=" colored">Coldfusion</i>
+      </div>
 
-    <div class="section-skills__wrapper">
-        <p class="title-tertiary">Outils</p>
-        <i class="devicon-sourcetree-original-wordmark colored"></i>
-        <i class="devicon-gitlab-plain colored"></i>
-        <i class="devicon-bitbucket-original-wordmark colored"></i>
-        <br /><br />
-        <i class="devicon-trello-plain colored"></i>
-        <i class="devicon-confluence-original colored"></i>
+      <div class="wysiwyg">
+          <p class="title-tertiary">Outils</p>
+          <i class="devicon-sourcetree-original-wordmark colored"></i>
+          <i class="devicon-gitlab-plain colored"></i>
+          <i class="devicon-bitbucket-original-wordmark colored"></i>
+          <br /><br />
+          <i class="devicon-trello-plain colored"></i>
+          <i class="devicon-confluence-original colored"></i>
 
-        <br /><br />
-        <i class="devicon-atom-plain colored"></i>
-        <i class="devicon-jetbrains-plain-wordmark colored"></i>
-    </div>
+          <br /><br />
+          <i class="devicon-atom-plain colored"></i>
+          <i class="devicon-jetbrains-plain-wordmark colored"></i>
 
-    <div class="section-skills__wrapper">
-        <p class="title-tertiary">Design</p>
-        <i class="devicon-photoshop-plain colored"></i>
-    </div>
+          <br /><br />
+          <i class="devicon-photoshop-plain colored"></i>
+      </div>
+  </div>
 </section>
