--- a/_sass/components/layouts.scss
+++ b/_sass/components/layouts.scss
@@ -6,9 +6,9 @@
   max-width:         calc(#{$content-width} - (#{$spacing-unit} * 2));
   margin-right: auto;
   margin-left: auto;
-  padding-right: $spacing-unit;
-  padding-left: $spacing-unit;
+  padding: $spacing-unit/2 $spacing-unit;
   @extend %clearfix;
+
 }
 .page-content{
   padding: $spacing-unit 0;
@@ -23,39 +23,58 @@
    font:800 17px/24px $base-font-family;
    text-transform: uppercase;
    letter-spacing: .1rem;
-
+   margin-bottom: calculateRem(15px);
 }
 
 .title-tertiary{
   font:800 14px/24px $base-font-family;
   text-transform: uppercase;
   letter-spacing: .1rem;
- margin-bottom: calculateRem(15px);
 }
 
 .wysiwyg{
   font:300 16px/28px $base-font-family;
-  margin-bottom: calculateRem(15px);
+  margin-bottom: $spacing-unit;
 }
 
-
-.section-skills{
-  &__wrapper{
-     margin-bottom: calculateRem(15px);
-  }
+.date{
+  display:block;
+  font-style: italic;
 }
 
+.homepage-section {
+    background: #ffffff; /* Old browsers */
+    background: -moz-linear-gradient(top, #ffffff 0%, #ededed 50%, #ffffff 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, #ffffff 0%,#ededed 50%,#ffffff 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, #ffffff 0%,#ededed 50%,#ffffff 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
+}
 
 /**
  * Media Queries
  */
 
- @include media-query($large) {
-   .page-wrapper{
-     max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit}));
-     max-width:         calc(#{$content-width} - (#{$spacing-unit}));
-     padding-right: $spacing-unit / 2;
-     padding-left: $spacing-unit / 2;
-   }
-
- }
+ // @include media-query($large) {
+ //   .page-wrapper{
+ //     max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit}));
+ //     max-width:         calc(#{$content-width} - (#{$spacing-unit}));
+ //     padding-right: $spacing-unit / 2;
+ //     padding-left: $spacing-unit / 2;
+ //   }
+ //
+ //    .wysiwyg{
+ //        @include inline-block;
+ //        vertical-align: top;
+ //               background-color: pink;
+ //    }
+ //   .section-about{
+ //     .wysiwyg{
+ //
+ //       padding-left: $spacing-unit;
+ //
+ //       &:first-child{
+ //         padding-left:0;
+ //       }
+ //     }
+ //   }
+ // }
