--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -16,9 +16,8 @@
           <i class=" colored">JSP</i>
           <i class="devicon-php-plain colored"></i>
           <i class=" colored">Coldfusion</i>
-      </div>
-
-      <div class="wysiwyg">
+      </div><!--
+        --><div class="wysiwyg wysiwyg--last">
           <p class="title-tertiary">Outils</p>
           <i class="devicon-sourcetree-original-wordmark colored"></i>
           <i class="devicon-gitlab-plain colored"></i>
