--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,5 +11,7 @@ layout: default
     {% include experience.html %}
     {% include formation.html %}
     {% include portfolio.html %}
-
+    <p class="homepage-link">
+      <a href="http://sabrinalecourt.ca/#portfolio" target="_blank" class="link-regular">Voir mes plus anciens projets</a>
+    </p>
 </div>
