--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,7 +9,7 @@
           <p class="title-tertiary">Ce que je fais</p>
           <div class="">Intégration web : découpe et intégration de maquettes HTML, expertise CSS, responsive web design; Respect des standards, forte sensibilité à la qualité web et à son accessibilité; Etre toujours en apprentissage. C’est l’apanage de ce métier!</div>
       </div>
-      <div class="wysiwyg">
+      <div class="wysiwyg wysiwyg--last">
           <p class="title-tertiary">Mon parcours</p>
           <div class="">Cinq années dans le commerce, avant de reprendre une année d’étude pré-universitaire, puis une formation en maintenance informatique. Première expérience de travail au Canada comme technologue en cartographie. Nouveau retour aux études, je découvre enfin mon nouvel univers.</div>
       </div>
