--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,9 +6,17 @@
   <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
   <meta name="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
 
+  <link rel="apple-touch-icon" sizes="180x180" href="{{ "/assets/img/favicons" | relative_url }}/apple-touch-icon.png">
+  <link rel="icon" type="image/png" href="{{ "/assets/img/favicons" | relative_url }}/favicon-32x32.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="{{ "/assets/img/favicons" | relative_url }}/favicon-16x16.png" sizes="16x16">
+  <link rel="manifest" href="{{ "/assets/img/favicons" | relative_url }}/manifest.json">
+  <link rel="mask-icon" href="{{ "/assets/img/favicons" | relative_url }}/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="theme-color" content="#ffffff">
+
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
+
 
   {% if jekyll.environment == 'production' and site.google_analytics %}
   {% include google-analytics.html %}
