--- a/_sass/components/block.scss
+++ b/_sass/components/block.scss
@@ -1,15 +1,20 @@
 .block-primary{
-    text-align:center;
+    position: relative;
     margin-bottom: $spacing-unit;
+    text-align:center;
     @extend %clearfix;
 
+
     &__info{
-      padding:$spacing-unit / 2 0;
+      box-sizing: border-box;
+      padding:calculateRem(30px) 0;
+      vertical-align: top;
     }
 
     &__preview-desktop-image-wrapper{
         border:1px solid $grey-color-light;
         border-top:0;
+        vertical-align: top;
     }
 
     &__preview-desktop-image{
@@ -77,5 +82,26 @@
     width:90%;
     @include box-sizing(border-box);
     @include padding(0 6px 6px 6px);
+  }
+}
+
+@media (min-width: $large){
+  .page-wrapper {
+    .block-primary:nth-child(2n+1) {
+      .block-primary__preview-wrapper{
+        float:left;
+      }
+    }
+  }
+  .block-primary{
+    &__info{
+      @include inline-block;
+      width:50%;
+    }
+
+    &__preview-wrapper{
+      @include inline-block;
+      width:50%;
+    }
   }
 }
