--- a/_includes/competences.html
+++ b/_includes/competences.html
@@ -1,6 +1,6 @@
-<section class="homepage-section section-skills" id="skills">
+<section class="homepage-section section-competence" id="{{site.menu1}}">
     <div class="page-wrapper">
-      <h2 class="title-secondary">Compétences</h2>
+      <h2 class="title-secondary">{{site.menu1}}</h2>
       <div class="wysiwyg">
           <p class="title-tertiary">Développement</p>
           <i class="devicon-html5-plain colored"></i>
