--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -1,7 +1,7 @@
 
-<section class="homepage-section section-portfolio" id="works">
+<section class="homepage-section section-portfolio" id="{{site.menu4}}">
     <div class="page-wrapper">
-      <h2 class="title-secondary">Mes Réalisations</h2>
+      <h2 class="title-secondary">{{site.menu4}}</h2>
       {% for post in site.posts %}
       <article class="block-primary clearfix">
           <div class="block-primary__info {{post.infoExtraClass}}">
