--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,10 +4,13 @@ layout: default
 
 <div class="homepage">
   <div class="page-wrapper">
-      <h1 class=title-primary>Bienvenue sur mon portfolio</h1>
+      <h1 class=title-primary>Sabrina Lecourt</h1>
+      <p class="homepage-tagline">
+        Intégratrice Web, développeure Junior, développeure Senior Front End puis Tech Lead Web Dev ... Et la suite ?
+      </p>
   </div>
-    {% include about.html %}
-    {% include skills.html %}
+<!--     {% include about.html %}-->
+    {% include competences.html %}
     {% include experience.html %}
     {% include formation.html %}
     {% include portfolio.html %}
