--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -1,18 +1,42 @@
-<section class="homepage-section section-experience" id="experience">
+<section class="homepage-section section-experience" id="{{site.menu2}}">
   <div class="page-wrapper">
-      <h2 class="title-secondary">Mon expérience</h2>
+      <h2 class="title-secondary">{{site.menu2}}</h2>
       <div class="wysiwyg">
-        <p class="title-tertiary">Développeur Senior - solutions medias 360</p>
-        <span class="date">Depuis Septembre 2014</span>
+        <p class="title-tertiary">Tech Lead Web Dev - <span class="title-tertiary--small">solutions medias 360</span></p>
+        <span class="date">Depuis Janvier 2017</span>
+        <span class="title-quaternary">Mes principaux défis:</span>
+        <ul class="section-experience-list">
+            <li class="">Guider l’équipe dans leur travail quotidien et les coacher pour améliorer leurs compétences en intégration.
+          </li>
+            <li class="">Assurer la qualité du code des nouvelles livraisons. (code review, post-mortem ...)
+          </li>
+            <li class="">Travailler avec les équipes internes pour assurer l’excellence dans l’exécution des projets dans les délais minimums.
+          </li>
+            <li class="">Documentation et formation
+          </li>
+            <li class="">Rassembler l’équipe pour l’atteinte des objectifs mensuels
+          </li>
+            <li class="">Mise en place des outils de travail pour l'equipe (trullo, asana, confluence)
+          </li>
+            <li class="">Mise en place et configuration des nouveaux projets
+          </li>
+            <li class="">Participer à la mise en place de nouveaux objectifs pour l’équipe d’Intégration, les suivre et les évaluer à la fin de l’année
+          </li>
+        </ul>
+      </div>
+
+      <div class="wysiwyg">
+        <p class="title-tertiary">Développeur Senior - <span class="title-tertiary--small">solutions medias 360</span></p>
+        <span class="date">Septembre 2014 à janvier 2017</span>
         Solutions Medias 360 (SM360), entreprise spécialisée dans le développement de
         produits et services numériques pour l’industrie de l’automobile et des médias.
         <br /> <br>
         J'ai développé une expertise dans la création de thèmes réutilisables. <br>
-        Mes points forts: architecture, code plug & play, styleguide, bonnes pratiques , code sématique.
+        Mes points forts: architecture, code plug & play, styleguide, bonnes pratiques , code sémantique.
       </div>
 
       <div class="wysiwyg">
-        <p class="title-tertiary">Développeur Junior - Vortex Solutions</p>
+        <p class="title-tertiary">Développeur Junior - <span class="title-tertiary--small">Vortex Solutions</span></p>
         <span class="date">Février à septembre 2014</span>
           Développeur web dans une grande agence, je travaille directement en collaboration
           avec le designer web et le chargé de projet.
@@ -22,7 +46,7 @@
       </div>
 
       <div class="wysiwyg">
-          <p class="title-tertiary">Intégrateure web Junior - Pixel Circus</p>
+          <p class="title-tertiary">Intégrateure web Junior - <span class="title-tertiary--small">Pixel Circus</span></p>
           <span class="date">Novembre 2012 à Février 2014</span>
             Intégration d’aplication Facebook, sites responsive et infolettres.
             J’utilise les technologies HTML5 / CSS3 / PHP5 et suis familière de la
@@ -30,7 +54,7 @@
       </div>
 
       <div class="wysiwyg">
-          <p class="title-tertiary">Opératrice à l'entrée de données - Marine Press of canada</p>
+          <p class="title-tertiary">Opératrice à l'entrée de données - <span class="title-tertiary--small">Marine Press of canada</span></p>
           <span class="date">2006 à 2011</span>
             Mon premier travail au Canada. Révision de document technique, gestion
             d'inventaire électronique, support technique.
