--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,31 +1,27 @@
-<header class="site-header" role="banner">
+<section class="sticky-header">
+  <header class="site-header" role="banner">
 
-  <div class="page-wrapper">
-    {% assign default_paths = site.pages | map: "path" %}
-    {% assign page_paths = site.header_pages | default: default_paths %}
-    <a class="site-title" href="{{ "/" | relative_url }}">Sabrina Lecourt</a>
+    <div class="header-wrapper">
+      {% assign default_paths = site.pages | map: "path" %}
+      {% assign page_paths = site.header_pages | default: default_paths %}
+      <a class="site-title" href="{{ "/" | relative_url }}" title="{{site.logoTitle}}">SL</a>
 
-    {% if page_paths %}
-      <nav class="site-nav">
-        <input type="checkbox" id="nav-trigger" class="nav-trigger" />
-        <label for="nav-trigger">
-          <span class="menu-icon">
-            <svg viewBox="0 0 18 15" width="18px" height="15px">
-              <path fill="#424242" d="M18,1.484c0,0.82-0.665,1.484-1.484,1.484H1.484C0.665,2.969,0,2.304,0,1.484l0,0C0,0.665,0.665,0,1.484,0 h15.031C17.335,0,18,0.665,18,1.484L18,1.484z"/>
-              <path fill="#424242" d="M18,7.516C18,8.335,17.335,9,16.516,9H1.484C0.665,9,0,8.335,0,7.516l0,0c0-0.82,0.665-1.484,1.484-1.484 h15.031C17.335,6.031,18,6.696,18,7.516L18,7.516z"/>
-              <path fill="#424242" d="M18,13.516C18,14.335,17.335,15,16.516,15H1.484C0.665,15,0,14.335,0,13.516l0,0 c0-0.82,0.665-1.484,1.484-1.484h15.031C17.335,12.031,18,12.696,18,13.516L18,13.516z"/>
-            </svg>
-          </span>
-        </label>
+      {% if page_paths %}
+        <nav class="site-nav">
+          <input type="checkbox" id="nav-trigger" class="nav-trigger" />
+          <label for="nav-trigger" class="nav-burger">
+            <span class="menu-icon"></span>
+          </label>
 
-        <div class="trigger">
-          <a href="#about"  class="page-link" title="À propos de moi">À propos</a>
-          <a href="#skills" class="page-link" title="Mes compétences">Compétences</a>
-          <a href="#experience" class="page-link" title="Expériences">Expériences</a>
-          <a href="#formation" class="page-link" title="formation">Formation</a>
-          <a href="#works"  class="page-link" title="Mes réalisations">Réalisations</a>
-        </div>
-      </nav>
-    {% endif %}
-  </div>
-</header>
+          <ul class="main-navigation">
+            <li><a href="#{{site.menu1}}" class="page-link" title="{{site.menu1}}">{{site.menu1}}</a></li>
+            <li><a href="#{{site.menu2}}" class="page-link" title="{{site.menu2}}">{{site.menu2}}</a></li>
+            <li><a href="#{{site.menu3}}" class="page-link" title="{{site.menu3}}">{{site.menu3}}</a></li>
+            <li><a href="#{{site.menu4}}" class="page-link" title="{{site.menu4}}">{{site.menu4}}</a></li>
+          </ul>
+        </nav>
+      {% endif %}
+    </div>
+  </header>
+
+</section>
