--- a/_sass/components/_header.scss
+++ b/_sass/components/_header.scss
@@ -1,29 +1,49 @@
 /**
+ * sticky header
+ */
+
+.sticky-header{
+  position:fixed;
+  width:100%;
+  z-index: 900;
+}
+
+/**
  * Site header
  */
 .site-header {
-  border-top: 5px solid $grey-color-dark;
-  border-bottom: 1px solid $grey-color-light;
+    position: relative;
   min-height: $spacing-unit * 1.865;
-
-  // Positioning context for the mobile navigation icon
-  position: relative;
+  background-color: $grey-color-dark;
 }
 
+/**
+ * Site title
+ */
 .site-title {
-  @include relative-font-size(1.625);
-  font-weight: 300;
+  @include font-size(26px);
+  font-weight: 900;
   line-height: $base-line-height * $base-font-size * 2.25;
   letter-spacing: -1px;
   margin-bottom: 0;
   float: left;
-
   &,
   &:visited {
-    color: $grey-color-dark;
+  color:$white-color;
   }
 }
+.header-wrapper{
+  max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit} * 2));
+  max-width:         calc(#{$content-width} - (#{$spacing-unit} * 2));
+  margin-right: auto;
+  margin-left: auto;
+  padding: 0 $spacing-unit;
+  @extend %clearfix;
+}
 
+/**
+ * Site nav
+ */
 .site-nav {
   float: right;
   line-height: $base-line-height * $base-font-size * 2.25;
@@ -37,65 +57,144 @@
   }
 
   .page-link {
-    color: $text-color;
+    text-transform: uppercase;
+    @include font-size(12px);
+    color: $white-color;
     line-height: $base-line-height;
-
-    // Gaps between nav items, but not on the last one
     &:not(:last-child) {
       margin-right: 20px;
     }
   }
 
-  @include media-query($medium) {
+  @include media-query($large) {
     position: absolute;
     top: 9px;
     right: $spacing-unit / 2;
-    background-color: $background-color;
-    border: 1px solid $grey-color-light;
+    width:100%;
     border-radius: 5px;
     text-align: right;
 
-    label[for="nav-trigger"] {
+    .nav-burger {
+      position: relative;
       display: block;
       float: right;
       width: 36px;
       height: 36px;
+      text-align: center;
+      //padding-bottom: 19px;
       z-index: 2;
       cursor: pointer;
-    }
 
-    .menu-icon {
-      display: block;
-      float: right;
-      width: 36px;
-      height: 26px;
-      line-height: 0;
-      padding-top: 10px;
-      text-align: center;
+      &.open{
+        .menu-icon{
+          top:22px;
+          right:11px;
 
-      > svg path {
-        fill: $grey-color-dark;
+          -webkit-transform: rotate(135deg);
+          -moz-transform: rotate(135deg);
+          -o-transform: rotate(135deg);
+          transform: rotate(135deg);
+
+          &::before{
+            visibility: hidden;
+          }
+          &::after{
+            visibility: visible;
+            top:-11px;
+
+            -webkit-transform: rotate(90deg);
+            -moz-transform: rotate(90deg);
+            -o-transform: rotate(90deg);
+            transform: rotate(90deg);
+          }
+        }
       }
     }
 
-    input ~ .trigger {
+.menu-icon{
+  position: absolute;
+  top:13px;
+  right: 6px;
+  display:inline-block;
+  background-color: $white-color;
+  width:26px;
+  height:1px;
+  line-height: 0;
+
+  &::before,
+  &:after{
+    content:'';
+    position: relative;
+    top:5px;
+    @include inline-block;
+    background-color: $white-color;
+    width:26px;
+    height:1px;
+    line-height: 0;
+  }
+
+  &:after{
+    top:9px;
+  }
+}
+    input ~ .main-navigation {
       clear: both;
       display: none;
+      transition: all 0.5s ease;
     }
 
-    input:checked ~ .trigger {
+    input:checked ~ .main-navigation {
       display: block;
-      padding-bottom: 5px;
+      position: absolute;
+      top:45px;
+      left:5px;
+      right: -5px;
+      text-align: center;
+      background-color: rgba(10,10,10,.95);
+
+      li{
+        &:hover{
+          .page-link{
+            text-decoration: underline;
+          }
+        }
+      }
     }
 
     .page-link {
       display: block;
-      padding: 5px 10px;
+      padding: 20px 0;
+      color:$white-color;
 
       &:not(:last-child) {
         margin-right: 0;
       }
       margin-left: 20px;
+    }
+  }
+}
+
+
+@media (min-width: $large){
+  .site-title{
+    width:5%;
+  }
+  .site-nav{
+    @include inline-block;
+    width:95%;
+  }
+
+  .main-navigation{
+    float:right;
+    text-align:center;
+    width:100%;
+    li{
+      @include inline-block;
+       width:19%;
+
+       &:hover{
+         background-color: $menu-hover;
+       }
     }
   }
 }
