--- a/_includes/formation.html
+++ b/_includes/formation.html
@@ -1,6 +1,6 @@
 <section class="homepage-section section-formation" id="{{site.menu3}}">
     <div class="page-wrapper">
-        <h2 class="title-secondary">{{site.menu3}}</h2>
+        <p class="title-secondary">{{site.menu3}}</p>
         <div class="wysiwyg">
           <p class="title-tertiary">AEC programmeur analyste - Cégep de Rosemont</p>
           <span class="date">2011 à 2012</span>
