--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -1,11 +1,11 @@
 
 <section class="homepage-section section-portfolio" id="{{site.menu4}}">
     <div class="page-wrapper">
-      <h2 class="title-secondary">{{site.menu4}}</h2>
+      <p class="title-secondary">{{site.menu4}}</p>
       {% for post in site.posts %}
       <article class="block-primary clearfix">
           <div class="block-primary__info {{post.infoExtraClass}}">
-              <h2 class="block-primary__title">{{post.title}}</h2>
+              <p class="block-primary__title">{{post.title}}</p>
               <div class="block-primary__wysiwyg">
                   {{post.description}}
               </div>
