--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,13 +4,14 @@ layout: default
 
 <div class="homepage">
   <div class="page-wrapper">
-      <h1 class=title-primary>Sabrina Lecourt</h1>
-      <p class="homepage-tagline">
-        Intégratrice Web, développeure Junior, développeure Senior Front End puis Tech Lead Web Dev ... Et la suite ?
-      </p>
+      <br><br>
+      <h1>
+          <span class=title-primary>Sabrina Lecourt</span> <br>
+          <span class="homepage-tagline">
+              Intégratrice Web, développeur Junior, développeur Senior Front End puis Tech Lead Web Dev ... Et la suite ?
+          </span>
+      </h1>
   </div>
-<!--     {% include about.html %}-->
-    {% include competences.html %}
     {% include experience.html %}
     {% include formation.html %}
     {% include portfolio.html %}
