--- a/_sass/components/_settings.scss
+++ b/_sass/components/_settings.scss
@@ -14,13 +14,14 @@ $spacing-unit:     10px !default;
 $white-color:      #fff !default;
 $black-color:      #111 !default;
 $primary-color:    #c0dfd9 !default;
-$secondary-color:    #e9ece5 !default;
-$tertiary-color:    #b3c2bf !default;
-$quaternary-color:    #3b3a36 !default;
+$secondary-color:  #e9ece5 !default;
+$tertiary-color:   #b3c2bf !default;
+$quaternary-color: #3b3a36 !default;
 
 $text-color:       #111 !default;
 $background-color: #fdfdfd !default;
 $brand-color:      #2a7ae2 !default;
+$separator-color:  #e54d26 !default;
 
 $grey-color:       #6d6e71 !default;
 $grey-color-light: lighten($grey-color, 40%) !default;
