--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -1,64 +1,124 @@
 <section class="homepage-section section-experience" id="{{site.menu2}}">
-  <div class="page-wrapper">
-      <h2 class="title-secondary">{{site.menu2}}</h2>
-      <div class="wysiwyg">
-        <p class="title-tertiary">Tech Lead Web Dev - <span class="title-tertiary--small">solutions medias 360</span></p>
-        <span class="date">Depuis Janvier 2017</span>
-        <span class="title-quaternary">Mes principaux défis:</span>
-        <ul class="section-experience-list">
-            <li class="">Guider l’équipe dans leur travail quotidien et les coacher pour améliorer leurs compétences en intégration.
-          </li>
-            <li class="">Assurer la qualité du code des nouvelles livraisons. (code review, post-mortem ...)
-          </li>
-            <li class="">Travailler avec les équipes internes pour assurer l’excellence dans l’exécution des projets dans les délais minimums.
-          </li>
-            <li class="">Documentation et formation
-          </li>
-            <li class="">Rassembler l’équipe pour l’atteinte des objectifs mensuels
-          </li>
-            <li class="">Mise en place des outils de travail pour l'equipe (trullo, asana, confluence)
-          </li>
-            <li class="">Mise en place et configuration des nouveaux projets
-          </li>
-            <li class="">Participer à la mise en place de nouveaux objectifs pour l’équipe d’Intégration, les suivre et les évaluer à la fin de l’année
-          </li>
-        </ul>
-      </div>
+    <div class="page-wrapper">
+        <p class="title-secondary">{{site.menu2}}</p>
+        <div class="wysiwyg">
+            <h2>
+                <span class="title-tertiary">Tech Lead Web Dev - <span class="title-tertiary--small">solutions medias 360</span></span>
+                <span class="date">Depuis Janvier 2017</span>
+            </h2>
+            <span class="title-quaternary">Mes principaux défis:</span>
 
-      <div class="wysiwyg">
-        <p class="title-tertiary">Développeur Senior - <span class="title-tertiary--small">solutions medias 360</span></p>
-        <span class="date">Septembre 2014 à janvier 2017</span>
-        Solutions Medias 360 (SM360), entreprise spécialisée dans le développement de
-        produits et services numériques pour l’industrie de l’automobile et des médias.
-        <br /> <br>
-        J'ai développé une expertise dans la création de thèmes réutilisables. <br>
-        Mes points forts: architecture, code plug & play, styleguide, bonnes pratiques , code sémantique.
-      </div>
+            <ul class="section-experience-list">
+                <li class="">Guider l’équipe web dev composé de 6 intégrateurs dans leur travail quotidien et les coacher pour améliorer leurs compétences en intégration.</li>
+                <li class="">Assurer la qualité du code des nouvelles livraisons. (code review, post-mortem ...)</li>
+                <li class="">Élaborer la documentation et encourager la transmission des connaissances</li>
+                <li class="">Rassembler l’équipe pour l’atteinte des objectifs mensuels</li>
+                <li class="">Mettre en place des outils de travail pour l'equipe (trello, asana, confluence)</li>
+                <li class="">Préparer les nouveaux projets</li>
+                <li class="">Participer à la mise en place de nouveaux objectifs pour l’équipe d’Intégration</li>
+            </ul>
 
-      <div class="wysiwyg">
-        <p class="title-tertiary">Développeur Junior - <span class="title-tertiary--small">Vortex Solutions</span></p>
-        <span class="date">Février à septembre 2014</span>
-          Développeur web dans une grande agence, je travaille directement en collaboration
-          avec le designer web et le chargé de projet.
-          Je développe en coldFusion avec Microsoft SQL Server 2008.
-          Je possède une bonne expérience en HTML/CSS/JQuery.
-          La plupart des sites sur lesquels je travaille sont responsives.
-      </div>
+            <div class="section-experience-competences">
+                <i class="devicon-foundation-plain-wordmark colored"></i>
+                <i class="devicon-sass-original colored"></i>
+                <i class="devicon-gulp-plain colored"></i>
+                <i class="devicon-trello-plain colored"></i>
+                <i class="devicon-confluence-original colored"></i>
+                <i class="devicon-atom-plain colored"></i>
+                <i class="devicon-slack-plain"></i>
+            </div>
+        </div>
+        <div class="block-separator"></div>
+        <div class="wysiwyg">
+            <h2>
+                <span class="title-tertiary">Développeur Senior - <span class="title-tertiary--small">solutions medias 360</span></span>
+                <span class="date">Septembre 2014 à janvier 2017</span>
+            </h2>
+            <p class="text-emphasis">Solutions Medias 360 (SM360), entreprise spécialisée dans le développement de
+            produits et services numériques pour l’industrie de l’automobile et des médias.</p>
 
-      <div class="wysiwyg">
-          <p class="title-tertiary">Intégrateure web Junior - <span class="title-tertiary--small">Pixel Circus</span></p>
-          <span class="date">Novembre 2012 à Février 2014</span>
-            Intégration d’aplication Facebook, sites responsive et infolettres.
-            J’utilise les technologies HTML5 / CSS3 / PHP5 et suis familière de la
-            méthode Agile. J’ai également une expertise avec wordpress et JQuery.
-      </div>
+            <div class="section-experience-description">
+                <ul class="">
+                   <li>J'ai développé une expertise dans la création de thèmes réutilisables.</li>
+                    <li> Mes points forts:
+                        architecture, code plug & play, styleguide, bonnes pratiques , code sémantique.</li>
+                </ul>
+            </div>
 
-      <div class="wysiwyg">
-          <p class="title-tertiary">Opératrice à l'entrée de données - <span class="title-tertiary--small">Marine Press of canada</span></p>
-          <span class="date">2006 à 2011</span>
-            Mon premier travail au Canada. Révision de document technique, gestion
-            d'inventaire électronique, support technique.
-            Production de données sur DVD et préparation des envois.
-      </div>
+            <div class="section-experience-competences">
+                <img src="../assets/img/pictos-competences/picto-jsp.png" class="devicon-jsp" alt="">
+                <i class="devicon-intellij-plain"></i>
+                <i class="devicon-tomcat-line"></i>
+                <i class="devicon-sourcetree-original-wordmark colored"></i>
+                <i class="devicon-gitlab-plain colored"></i>
+
+                <i class="devicon-less-plain-wordmark colored"></i>
+            </div>
+        </div>
+        <div class="block-separator"></div>
+        <div class="wysiwyg">
+            <h2>
+                <span class="title-tertiary">Développeur Junior - <span class="title-tertiary--small">Vortex Solutions</span></span>
+                <span class="date">Février à septembre 2014</span>
+            </h2>
+            <div class="section-experience-description">
+               <ul>
+                   <li>Développeur web dans une grande agence, je travaille directement en collaboration avec le designer web et le chargé de projet.</li>
+                   <li>Développement en coldFusion et Microsoft SQL Server 2008.</li>
+                   <li>Je possède une bonne expérience en HTML/CSS/JQuery.</li>
+                   <li>La plupart des sites sur lesquels je travaille sont responsives.</li>
+               </ul>
+            </div>
+            <div class="section-experience-competences">
+                <i class="devicon-html5-plain colored"></i>
+                <i class="devicon-css3-plain colored"></i>
+                <i class="devicon-jquery-plain colored"></i>
+                <img src="../assets/img/pictos-competences/picto-coldfusion.png" alt="" width="40px;">
+                <img src="../assets/img/pictos-competences/picto-microsoft-sqlserver2008.png" alt="" width="80px;">
+            </div>
+        </div>
+        <div class="block-separator"></div>
+        <div class="wysiwyg">
+            <h2>
+                <span class="title-tertiary">Intégrateure web Junior - <span class="title-tertiary--small">Pixel Circus</span></span>
+                <br>
+                <span class="date">Novembre 2012 à Février 2014</span>
+            </h2>
+            <div class="section-experience-description">
+                <ul class="">
+                    <li>Intégration d’application Facebook, sites responsive et infolettres.</li>
+                    <li>J’utilise entre autres les technologies HTML5 / CSS3 / JQUERY / PHP5 et la méthode Agile</li>
+                </ul>
+            </div>
+            <div class="section-experience-competences">
+                <i class="devicon-html5-plain colored"></i>
+                <i class="devicon-css3-plain colored"></i>
+                <i class="devicon-jquery-plain colored"></i>
+                <i class="devicon-photoshop-plain colored"></i>
+                <i class="devicon-php-plain colored"></i>
+                <i class="devicon-codeigniter-plain colored"></i>
+                <i class="devicon-bitbucket-original-wordmark colored"></i>
+                <i class="devicon-mysql-plain-wordmark colored"></i>
+
+            </div>
+        </div>
+        <div class="block-separator"></div>
+        <div class="wysiwyg">
+            <h2>
+                <span class="title-tertiary">Opératrice à la saisie de données - <span class="title-tertiary--small">Marine Press of canada</span></span><br>
+                <span class="date">2006 à 2011 - <span class="text-emphasis">Mon premier travail au Canada</span></span>
+            </h2>
+            <div class="section-experience-description">
+                <ul class="">
+                    <li>Révision de document technique,</li>
+                    <li>gestion d'inventaire électronique,</li>
+                    <li>Support technique.</li>
+                </ul>
+                <ul class="">
+                    <li>Production de données</li>
+                    <li>Préparation des envois.</li>
+                </ul>
+            </div>
+        </div>
     </div>
 </section>
