--- a/_sass/components/_base.scss
+++ b/_sass/components/_base.scss
@@ -45,7 +45,7 @@ ul, ol, dl, figure,
  */
 img {
   max-width: 100%;
-  vertical-align: middle;
+  vertical-align: top;
 }
 
 
@@ -189,4 +189,17 @@ pre {
   li + li {
     padding-top: 5px;
   }
+}
+
+
+.text-emphasis {
+  font-weight: 600;
+}
+
+
+.block-separator{
+  width:30%;
+  height:1px;
+  background-color: $separator-color;
+  margin: 0 auto;
 }
