--- a/_sass/components/layouts.scss
+++ b/_sass/components/layouts.scss
@@ -58,6 +58,7 @@
 }
 
 .wysiwyg{
+  position: relative;
   box-sizing: border-box;
   margin-bottom:calculateRem(30px);
 
@@ -73,8 +74,41 @@
 .section-competence{
   background-color: $primary-color;
 }
+.section-experience-description{
+
+
+  ul{
+    list-style-type: disc;
+    display: inline-block;
+    width: 45%;
+    vertical-align: top;
+  }
+}
+
 .section-experience{
   background-color: $secondary-color;
+
+  .wysiwyg{
+    padding-top: 20px;
+
+    &:last-child{
+      &::after{
+        height: 0;
+      }
+    }
+/*
+    &::after{
+      content: '';
+      display: inline-block;
+      width:40%;
+      height:1px;
+      margin: 18px auto 0;
+      text-align: center;
+      background-color: #e54d26;
+
+      @include horizontal-center;
+    }*/
+  }
 
   &-list {
     padding-left:18px;
@@ -82,6 +116,9 @@
     li{
       list-style: disc;
     }
+  }
+  &-competences{
+    position: relative;
   }
 }
 
