Update Section Experience

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,7 +1,34 @@
+<style>
+    h2{color:red;
+    font-size:40px;
+    }
+</style>
+
 <section class="homepage-section section-about" id="about">
   <div class="page-wrapper">
-      <div class="wysiwyg">
-          <div class=""></div>
+
+      <h1>Derniers articles</h1>
+      <div id="articles">
       </div>
+
+      <h1>Le Premier Ministre</h1>
+      <div id="premMin">
+      </div>
+
+      <h1>La météo à Lyon</h1>
+      <div id="meteo"></div>
+
+
+      <div class="wysiwyg">
+          Quelques langages
+          <ul id="langages"></ul>
+      </div>
+
+      <div class="wysiwyg">
+         Afficher les peintres
+          <table id="peintres"></table>
+      </div>
+
+
   </div>
 </section>
