--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,10 +8,11 @@ layout: default
       <h1>
           <span class=title-primary>Sabrina Lecourt</span> <br>
           <span class="homepage-tagline">
-              Intégratrice Web, développeur Junior, développeur Senior Front End puis Tech Lead Web Dev ... Et la suite ?
+              Développeur Web Front End
           </span>
       </h1>
   </div>
+ <!--   {% include about.html %}-->
     {% include experience.html %}
     {% include formation.html %}
     {% include portfolio.html %}
