--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,7 +17,9 @@
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<!--  <script type="text/javascript" async="" src="{{ "/assets/js/ajax.js" | relative_url }}"></script>-->
   <script type="text/javascript" async="" src="{{ "/assets/js/main.js" | relative_url }}"></script>
+
   {% if jekyll.environment == 'production' and site.google_analytics %}
   {% include google-analytics.html %}
   {% endif %}
